# Adjusted-Universal-Robots-Package

gripper_ur5/: CMakeLists.txt  package.xml
gripper_ur5/launch/: gripper.launch
gripper_ur5/scripts/: ur5_republisher.py
gripper_ur5/src/: main.cpp
octomap_mapping-kinetic-devel/octomap_server/launch/: octomap_mapping.launch
universal_robot-kinetic-devel/: CHANGES  cobots_PAP.launch
universal_robot-kinetic-devel/ur5_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  original_ur5.srdf  sensors_rgbd.yaml  ur5.srdf  v0_1_ur5_srdf  v0_2_ur5_srdf
universal_robot-kinetic-devel/ur5_moveit_config/launch/: move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  ur5_moveit_planning_execution.launch  ur5_moveit_sensor_manager.launch.xml
universal_robot-kinetic-devel/ur_description/launch/: ur5_upload.launch
universal_robot-kinetic-devel/ur_description/meshes/final_gripper/collision/: body.stl  driven_arm.stl  driver_arm.stl  dynamixel.stl  dynamixel_gear.stl  finger.stl  follower.stl
universal_robot-kinetic-devel/ur_description/meshes/final_gripper/visual/: body.dae  driven_arm.dae  driver_arm.dae  dynamixel.dae  dynamixel_gear.dae  finger.dae  follower.dae
universal_robot-kinetic-devel/ur_description/meshes/gripper/collision/: arm.stl  driven_arm.stl  driver_arm.stl  finger.stl  mount.stl  plate.stl  promo.stl
universal_robot-kinetic-devel/ur_description/meshes/gripper/visual/: arm.dae  driven_arm.dae  driver_arm.dae  finger.dae  mount.dae  plate.dae  promo.dae
universal_robot-kinetic-devel/ur_description/meshes/ur5/collision/: box1.stl
universal_robot-kinetic-devel/ur_description/urdf/: common.gazebo.xacro  final_gripper.gazebo  final_gripper.urdf.xacro  gripper.gazebo  gripper.urdf (backup).xacro  gripper.urdf.xacro  gripper_promo.urdf.xacro  kinect.gazebo  kinect.xacro  original_kinect.xacro  ur.gazebo.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
universal_robot-kinetic-devel/ur_gazebo/controller/: final_gripper_controller.yaml  gripper_controller.yaml
universal_robot-kinetic-devel/ur_gazebo/launch/: cobots_PAP.launch  gripper_test.launch  ur5.launch
universal_robot-kinetic-devel/ur_kinematics/: CMakeLists.txt  package.xml
universal_robot-kinetic-devel/ur_kinematics/launch/: PAP_client_service.launch
universal_robot-kinetic-devel/ur_kinematics/msg/: vision_data.msg  vision_data2.msg
universal_robot-kinetic-devel/ur_kinematics/src/: octomap_loader_test.cpp  ur5_PAP.cpp  ur5_PAP_client.cpp  ur5_PAP_service.cpp  ur5_PAP_test.cpp  ur5_client_test.cpp  ur5_pick.cpp  ur5_pose_pub.cpp  ur5_pose_sub.cpp  ur5_pose_sub_PAP.cpp  ur5_service_test.cpp  ur5_solver_test.cpp  ur5_trajectory_test.cpp  ur5_workspace.cpp  ur5_workspace_real.cpp  ur5_workspace_test.cpp
universal_robot-kinetic-devel/ur_kinematics/srv/: service_test.srv
ur_modern_driver-master/config/: gripper_controller.yaml  ur5_controllers.yaml
ur_modern_driver-master/launch/: cobots.launch  ur5_bringup.launch  ur5_bringup_joint_limited.launch  ur5_ros_control.launch  ur_common.launch
